--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
 	<string name="my_page">MY PAGE</string>
 	<string name="my_review_history">MY REVIEW HISTORY</string>
 	<string name="airdrop_alarm_setting">AIRDROP ALARM SETTING</string>
+	<string name="cafe">Cafe</string>
+	<string name="restaurant">Restaurant</string>
+	<string name="bar">Bar</string>
+	<string name="shopping">Shopping</string>
+	<string name="cultural_life">Cultural Life</string>
+	<string name="fitness"> Fitness</string>
+	<string name="shop">Shop</string>
+	<string name="food">Food</string>
+	<string name="selfy">Selfy</string>
+	<string name="airdrop_filter_a">What kind of place do you\nwant to be recommended?</string>
+	<string name="airdrop_filter_b">Which picture do you \nwant to see?</string>
+	<string name="airdrop_filter_c">Please select a time zone \nto receive the alarm!</string>
 </resources>
