--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,12 @@
 	<string name="my_page">MY PAGE</string>
 	<string name="my_review_history">MY REVIEW HISTORY</string>
 	<string name="airdrop_alarm_setting">AIRDROP ALARM SETTING</string>
-	<string name="cafe">Cafe</string>
-	<string name="restaurant">Restaurant</string>
-	<string name="bar">Bar</string>
-	<string name="shopping">Shopping</string>
-	<string name="cultural_life">Cultural Life</string>
-	<string name="fitness"> Fitness</string>
+	<string name="cafe">CAFE</string>
+	<string name="restaurant">RESTAURANT</string>
+	<string name="bar">BAR</string>
+	<string name="shopping">SHOPPING</string>
+	<string name="cultural_life">CULTURAL LIFE</string>
+	<string name="fitness">FITNESS</string>
 	<string name="shop">Shop</string>
 	<string name="food">Food</string>
 	<string name="selfy">Selfy</string>
@@ -21,4 +21,5 @@
 	<string name="photo">PHOTO</string>
 	<string name="review">REVIEW</string>
 	<string name="save">Save</string>
+	<string name="find_a_place_naround_me_now">Find a place\naround me now!</string>
 </resources>
